--- a/Views/PersonalCenter/Spread.html
+++ b/Views/PersonalCenter/Spread.html
@@ -18,10 +18,10 @@
         <div class="col-xs-6 text-center" style="padding-left: 0"><a href="#" class="" id="integral_list">积分奖励</a></div>
     </div>
     <div class="container" id="myRefer">
-
+        <div class="text-center" style="margin-top: 40%;font-size: 16px">暂无推广记录</div>
     </div>
     <div class="container" id="integral" hidden>
-
+        <div class="text-center" style="margin-top: 40%;font-size: 16px">暂无积分奖励</div>
     </div>
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
