新增月结奖励

--- a/Views/Talent/TalentRule.html
+++ b/Views/Talent/TalentRule.html
@@ -26,9 +26,9 @@
         <ul class="list-unstyled character">
             <li>摩英达人规则说明</li>
             <li>1.如何成为摩英达人？</li>
-            <li>用户购买16880元课程套餐，申请成为摩英达人即可。</li>
+            <li>用户购买任意课程并缴费，即可申请成为摩英达人。</li>
             <li>2.摩英达人如何获得能量币？</li>
-            <li>其他用户扫描你的二维码进行注册可获得xx能量币</li>
+            <li>其他用户扫描你的二维码进行注册或消费即可获得一定数量能量币</li>
         </ul>
     </div>
 </body>
