--- a/Css/Account/Login.css
+++ b/Css/Account/Login.css
@@ -23,10 +23,10 @@ input {
 #btnLogin,#btnSendSMS,#btnReg {
     width: 100%;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     color: #ffffff;
     background-color: #F24C4C;
-    height: 40px;
+    height: 45px;
 }
 
 ::selection {
@@ -40,4 +40,19 @@ input {
 ::-webkit-selection {
     background:#F24C4C;
     color:#fff;
+}
+:-moz-placeholder {
+    color: #fff;
+}
+
+::-moz-placeholder {
+    color: #fff;
+}
+
+input:-ms-input-placeholder {
+    color: #fff;
+}
+
+input::-webkit-input-placeholder {
+    color: #fff;
 }
