--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -8,117 +8,35 @@
     <title>注册账号</title>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="../../Css/Account/Login.css">
-    <style>
-        .pl5 {
-            padding-left: 5px
-        }
-
-        .pr5 {
-            padding-right: 5px
-        }
-
-        .pl15 {
-            padding-left: 15px;
-        }
-
-        .pr15 {
-            padding-right: 15px;
-        }
-
-        .pdtb15 {
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-
-        .display_block {
-            display: block
-        }
-
-        a {
-            color: #333;
-            text-decoration: none;
-        }
-        .container {
-            width: 90%
-        }
-        input {
-            background: transparent;
-            border: none;
-            border-bottom: 1px solid #ddd;
-            border-radius: 0px;
-        }
-    </style>
+    <link rel="stylesheet" href="../../Css/Account/Register.css">
 </head>
 <body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
-<div class="container">
-    <!--<div class="row pdtb15 border_btm">-->
-        <!--<div class="col-xs-3 pl15 pr5">-->
-            <!--<span class="pdtb10 display_block">手机号：</span></div>-->
-        <!--<div class="col-xs-9 pr15 pl5">-->
-            <!--<input type="text" id="Phone" name="Phone" placeholder="请输入手机号码"/></div>-->
-    <!--</div>-->
-    <!--<div class="row pdtb15 border_btm">-->
-        <!--<div class="col-xs-8 pl15 pr5">-->
-            <!--<input type="text" id="QrCode" name="QrCode" placeholder="请输入右边图形验证码"/></div>-->
-        <!--<div class="col-xs-4 pr15 pl5">-->
-            <!--<canvas class="J_codeimg" style="width: 100%;height: 40px;" id="myCanvas" onclick="createCode()">对不起，您的浏览器不支持canvas，请下载最新版浏览器!</canvas>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row pdtb15 border_btm">-->
-        <!--<div class="col-xs-3 pl15 pr5">-->
-            <!--<span class="pdtb10 display_block">验证码：</span></div>-->
-        <!--<div class="col-xs-5 pr15 pl5">-->
-            <!--<input type="text" id="VerificationCode" name="UserName" placeholder="请输入验证码"/></div>-->
-        <!--<div class="col-xs-4 pr15 pl5">-->
-            <!--<button id="btnSendSMS" style="font-size: 12px;">发送验证码</button>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row pdtb15 border_btm">-->
-        <!--<div class="col-xs-3 pl15 pr5">-->
-            <!--<sapn class="pdtb10 display_block">密码：</sapn>-->
-        <!--</div>-->
-        <!--<div class="col-xs-9 pr15 pl5">-->
-            <!--<input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>-->
-    <!--</div>-->
-    <div style="text-align: center;padding-bottom: 20px;padding-top: 30px;">
-        <img src="../../Images/account/Account_Logo.png" style="height: 75px;width: 75px;"/>
-        <p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>
+<div class="container" style=" margin-top: 20px !important;">
+    <div class="row">
+        <div class="col-xs-12">
+            <img src="../../Images/account/return.png" height="25" width="25"/>
+        </div>
     </div>
+</div>
+<div class="container" style="width: 85%;margin-top: 20px !important;">
     <div class="row pdtb15">
         <div class="col-xs-12">
-            <input type="text" id="Phone" name="Phone" autocomplete="off" placeholder="请输入手机号码"/></div>
+            <input class="input" type="text" id="Phone" name="Phone" autocomplete="off" placeholder="请输入手机号码"/></div>
     </div>
-    <!--<div class="row pdtb15">-->
-        <!--<div class="col-xs-8 pl15 pr5">-->
-            <!--<input type="text" id="QrCode" name="QrCode" placeholder="请输入右边图形验证码"/></div>-->
-        <!--<div class="col-xs-4 pr15 pl5">-->
-            <!--<canvas class="J_codeimg" style="width: 100%;height: 40px;" id="myCanvas" onclick="createCode()">-->
-                <!--对不起，您的浏览器不支持canvas，请下载最新版浏览器!-->
-            <!--</canvas>-->
-        <!--</div>-->
-    <!--</div>-->
     <div class="row pdtb15">
-        <div class="col-xs-7 pr15">
-            <input type="text" id="VerificationCode" name="VerificationCode" autocomplete="off" placeholder="请输入验证码"/></div>
-        <div class="col-xs-5 pr15 pl5">
-            <button id="btnSendSMS" style="font-size: 12px;">发送验证码</button>
+        <div class="col-xs-12 pr15" style="position: relative;">
+            <input class="input" type="text" id="VerificationCode" name="VerificationCode" autocomplete="off"
+                   placeholder="请输入验证码"/>
+            <button id="btnSendSMS">发送验证码</button>
         </div>
     </div>
     <div class="row pdtb15">
         <div class="col-xs-12 pr15">
-            <input type="password" id="Pwd" name="Pwd" autocomplete="off" placeholder="请输入登录密码"/></div>
+            <input class="input" type="password" id="Pwd" name="Pwd" autocomplete="off" placeholder="请输入登录密码"/></div>
     </div>
     <div class="row pdtb15">
         <div class="col-xs-12 text-right">
             <button id="btnReg">注 册</button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-6">
-        </div>
-        <div class="col-xs-6 text-right">
-            <a href="Login.html" style="font-size: 12px;">已有账号登录》</a>
         </div>
     </div>
 </div>
