修改首页登录的样式

--- a/Views/Account/RetrievePassword.html
+++ b/Views/Account/RetrievePassword.html
@@ -46,7 +46,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
 <div class="container">
     <div class="row pdtb15 border_btm">
         <div class="col-xs-3 pl15 pr5">
