--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -39,9 +39,22 @@
         }
 
         .container {
-            width: 80%
+            width: 85%
         }
         .row{margin-top: 10px;}
+
+        input {
+            background: transparent;
+            border: 1px solid #ffffff;
+            border-radius: 25px;
+            padding-left: 24px;
+            height: 45px;
+        }
+
+        .top {
+            margin-top: 35px;
+        }
+
     </style>
 </head>
 <body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
@@ -59,28 +72,33 @@
     <!--<div class="col-xs-9 pr15 pl5">-->
     <!--<input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>-->
     <!--</div>-->
-    <div style="text-align: center;padding-bottom: 20px;padding-top: 30px;">
-        <img src="../../Images/account/Account_Logo.png" style="height: 75px;width: 75px;"/>
-        <p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>
-    </div>
+    <!--<div style="text-align: center;padding-bottom: 20px;padding-top: 30px;">-->
+        <!--<img src="../../Images/account/Account_Logo.png" style="height: 75px;width: 75px;"/>-->
+        <!--<p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>-->
+    <!--</div>-->
     <div class="row">
+        <div class="col-xs-12">
+            <img src="../../Images/account/return.png" height="25" width="25"/>
+        </div>
+    </div>
+    <div class="row top">
         <div class="col-xs-12 text-center">
             <input type="text" id="UserName" name="UserName" autocomplete="off" placeholder="请输入手机号码"/></div>
     </div>
-    <div class="row">
+    <div class="row top">
         <div class="col-xs-12 text-center">
             <input type="password" id="Pwd" name="Pwd" autocomplete="off" placeholder="请输入登录密码"/></div>
     </div>
-    <div class="row">
+    <div class="row top">
         <div class="col-xs-12 text-center">
-           <button id="btnLogin">登 录</button></div>
+           <button id="btnLogin" style="border-radius: 25px; height: 45px">登 录</button></div>
     </div>
-    <div class="row">
-        <div class="col-xs-6">
-            <a href="Register.html" style="font-size: 12px;">注册账号</a>
-        </div>
-        <div class="col-xs-6 text-right">
-            <a href="RetrievePassword.html" style="font-size: 12px;">忘记密码？</a>
+    <div class="row" style="margin-top: 20px">
+        <!--<div class="col-xs-6">-->
+            <!--<a href="Register.html" style="font-size: 12px;">注册账号</a>-->
+        <!--</div>-->
+        <div class="col-xs-12 text-center">
+            <a href="RetrievePassword.html" style="font-size: 12px;color: #fd5454">忘记密码？</a>
         </div>
     </div>
 </div>
