找回密码页面重新布局

--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -14,7 +14,7 @@
 <div class="container" style=" margin-top: 20px !important;">
     <div class="row">
         <div class="col-xs-12">
-            <img src="../../Images/account/return.png" height="25" width="25"/>
+            <a href="../index.html"><img src="../../Images/account/return.png" height="25" width="25"/></a>
         </div>
     </div>
 </div>
