--- a/Views/Account/RetrievePassword.html
+++ b/Views/Account/RetrievePassword.html
@@ -7,79 +7,36 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="../../Css/Account/Login.css">
     <title>找回密码</title>
-    <style>
-        .pl5 {
-            padding-left: 5px
-        }
-
-        .pr5 {
-            padding-right: 5px
-        }
-
-        .pl15 {
-            padding-left: 15px;
-        }
-
-        .pr15 {
-            padding-right: 15px;
-        }
-
-        .pdtb10 {
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-
-        .pdtb15 {
-            padding-top: 15px;
-            padding-bottom: 15px;
-        }
-
-        .display_block {
-            display: block
-        }
-
-        a {
-            color: #000;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="../../Css/Account/Register.css">
 </head>
 <body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
-<div class="container">
-    <div class="row pdtb15 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="pdtb10 display_block">手机号：</span></div>
-        <div class="col-xs-9 pr15 pl5">
-            <input type="text" id="Phone" name="Phone" placeholder="请输入手机号码"/></div>
+<div class="container" style=" margin-top: 20px !important;">
+    <div class="row">
+        <div class="col-xs-12">
+            <a href="../index.html"><img src="../../Images/account/return.png" height="25" width="25"/></a>
+        </div>
     </div>
-    <div class="row pdtb15 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="pdtb10 display_block">验证码：</span></div>
-        <div class="col-xs-5 pr15 pl5">
-            <input type="text" id="VerificationCode" name="UserName" placeholder="请输入验证码"/></div>
-        <div class="col-xs-4 pr15 pl5">
+</div>
+<div class="container" style="width: 85%;margin-top: 20px !important;">
+    <div class="row pdtb15">
+        <div class="col-xs-12">
+            <input class="input" type="text" id="Phone" name="Phone" autocomplete="off" placeholder="请输入手机号码"/></div>
+    </div>
+    <div class="row pdtb15">
+        <div class="col-xs-12 pr15" style="position: relative;">
+            <input class="input" type="text" id="VerificationCode" name="VerificationCode" autocomplete="off"
+                   placeholder="请输入验证码"/>
             <button id="btnSendSMS">发送验证码</button>
         </div>
     </div>
-    <div class="row pdtb15 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <sapn class="pdtb10 display_block">新密码：</sapn>
-        </div>
-        <div class="col-xs-9 pr15 pl5">
-            <input type="password" id="Pwd" name="Pwd" placeholder="请输入新密码"/></div>
+    <div class="row pdtb15">
+        <div class="col-xs-12 pr15">
+            <input class="input" type="password" id="Pwd" name="Pwd" autocomplete="off" placeholder="新密码"/></div>
     </div>
     <div class="row pdtb15">
         <div class="col-xs-12 text-right">
-            <button id="btnReg">确定</button>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-6">
-        </div>
-        <div class="col-xs-6 text-right">
-            <a href="Login.html">已有账号登录》</a>
+            <button id="btnReg">确 定</button>
         </div>
     </div>
 </div>
@@ -88,7 +45,6 @@
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
-<!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../Scripts/Account/RetrievePassword.js"></script>
 </body>
