--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -9,78 +9,16 @@
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../Css/Account/Login.css">
-    <style>
-        a {
-            color: #333;
-            text-decoration: none;
-        }
-
-        input::-webkit-input-placeholder {
-            color: #999 !important; /* WebKit browsers */
-        }
-
-        input:-moz-placeholder {
-            color: #999 !important; /* Mozilla Firefox 4 to 18 */
-        }
-
-        input::-moz-placeholder {
-            color: #999 !important; /* Mozilla Firefox 19+ */
-        }
-
-        input:-ms-input-placeholder {
-            color: #999 !important; /* Internet Explorer 10+ */
-        }
-
-        input {
-            background: transparent;
-            border: none;
-            border-bottom: 1px solid #ddd;
-            border-radius: 0px;
-        }
-
-        .container {
-            width: 85%
-        }
-        .row{margin-top: 10px;}
-
-        input {
-            background: transparent;
-            border: 1px solid #ffffff;
-            border-radius: 25px;
-            padding-left: 24px;
-            height: 45px;
-        }
-
-        .top {
-            margin-top: 35px;
-        }
-
-    </style>
 </head>
 <body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
-<div class="container">
-    <!--<div class="row pdtb15 border_btm">-->
-    <!--<div class="col-xs-3 pl15 pr5">-->
-    <!--<span class="pdtb10 display_block">手机号：</span></div>-->
-    <!--<div class="col-xs-9 pr15 pl5">-->
-    <!--<input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>-->
-    <!--</div>-->
-    <!--<div class="row pdtb15 border_btm">-->
-    <!--<div class="col-xs-3 pl15 pr5">-->
-    <!--<sapn class="pdtb10 display_block">密码：</sapn>-->
-    <!--</div>-->
-    <!--<div class="col-xs-9 pr15 pl5">-->
-    <!--<input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>-->
-    <!--</div>-->
-    <!--<div style="text-align: center;padding-bottom: 20px;padding-top: 30px;">-->
-        <!--<img src="../../Images/account/Account_Logo.png" style="height: 75px;width: 75px;"/>-->
-        <!--<p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>-->
-    <!--</div>-->
+<div class="container" style=" margin-top: 20px !important;">
     <div class="row">
         <div class="col-xs-12">
-            <img src="../../Images/account/return.png" height="25" width="25"/>
+            <a href="../index.html"><img src="../../Images/account/return.png" height="25" width="25"/></a>
         </div>
     </div>
+</div>
+<div class="container" style="width: 85%;">
     <div class="row top">
         <div class="col-xs-12 text-center">
             <input type="text" id="UserName" name="UserName" autocomplete="off" placeholder="请输入手机号码"/></div>
