--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -14,42 +14,7 @@
             color: #333;
             text-decoration: none;
         }
-
-        input::-webkit-input-placeholder {
-            color: #999 !important; /* WebKit browsers */
-        }
-
-        input:-moz-placeholder {
-            color: #999 !important; /* Mozilla Firefox 4 to 18 */
-        }
-
-        input::-moz-placeholder {
-            color: #999 !important; /* Mozilla Firefox 19+ */
-        }
-
-        input:-ms-input-placeholder {
-            color: #999 !important; /* Internet Explorer 10+ */
-        }
-
-        input {
-            background: transparent;
-            border: none;
-            border-bottom: 1px solid #ddd;
-            border-radius: 0px;
-        }
-
-        .container {
-            width: 85%
-        }
         .row{margin-top: 10px;}
-
-        input {
-            background: transparent;
-            border: 1px solid #ffffff;
-            border-radius: 25px;
-            padding-left: 24px;
-            height: 45px;
-        }
 
         .top {
             margin-top: 35px;
@@ -58,7 +23,7 @@
     </style>
 </head>
 <body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
-<div class="container">
+<div class="container" style="width: 85%">
     <!--<div class="row pdtb15 border_btm">-->
     <!--<div class="col-xs-3 pl15 pr5">-->
     <!--<span class="pdtb10 display_block">手机号：</span></div>-->
