--- a/Css/Account/Index.css
+++ b/Css/Account/Index.css
@@ -3,23 +3,31 @@ body{
 }
 .container {
     margin-top: 30px !important;
+    width: 85%;
 }
 .border_btm{
     border-bottom: 1px solid #eeeeee;}
 
-input {
-    background: transparent;
-    border: 1px solid #ffffff;
-    border-radius: 25px;
-    padding-left: 24px;
-    height: 45px;
-    outline: none;
-    width: 100%;
+.pt15 {
+    padding-top: 15px;
+}
 
+.pt50 {
+    padding-top: 50px;
+}
+
+input {
+    height: 40px;
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    outline: none;
 }
 
 /*input:focus {*/
-    /*border: 1px solid #F24C4C;;*/
+/*border: 1px solid #F24C4C;;*/
 /*}*/
 
 #btnLogin,#btnSendSMS,#btnReg {
@@ -29,6 +37,17 @@ input {
     color: #ffffff;
     background-color: #F24C4C;
     height: 45px;
+    outline: none;
+}
+
+#btnRegister {
+    width: 100%;
+    border: 1px solid #fd5454;
+    border-radius: 25px;
+    color: #fd5454;
+    background: transparent;
+    height: 45px;
+    outline: none;
 }
 
 ::selection {
