--- a/Views/Admin/Commen/header.html
+++ b/Views/Admin/Commen/header.html
@@ -13,28 +13,46 @@
         </div>
         <div class="collapse navbar-collapse" id="example-navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class=""><a href="/Course/Views/Admin/Course/CourseList.html">课程管理</a></li>
-                <li><a href="/Course/Views/Admin/CourseType/CourseTypeList.html">课程类型管理</a></li>
-                <li><a href="/Course/Views/Admin/Teacher/TeacherList.html">教师管理</a></li>
-                <li><a href="/Course/Views/Admin/User/UserList.html">学员管理</a></li>
-                <li><a href="/Course/Views/Admin/store/ProductList.html">商品管理</a></li>
-                <li><a href="/Course/Views/Admin/store/OrderList.html">订单管理</a></li>
-                <!--<li><a href="/Course/Views/Admin/User/UserList.html">教师管理</a></li>-->
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">课程管理
+                    <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/Course/Views/Admin/Course/CourseList.html">课程列表</a></li>
+                        <li><a href="/Course/Views/Admin/CourseType/CourseTypeList.html">课程类型管理</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">用户管理
+                        <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/Course/Views/Admin/Teacher/TeacherList.html">教师管理</a></li>
+                        <li><a href="/Course/Views/Admin/User/UserList.html">学员管理</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">商品管理
+                        <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/Course/Views/Admin/store/ProductList.html">商品列表</a></li>
+                        <li><a href="/Course/Views/Admin/store/OrderList.html">订单管理</a></li>
+                    </ul>
+                </li>
+
                 <!--<li class="dropdown">-->
-                <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-                <!--关于我们 <b class="caret"></b>-->
-                <!--</a>-->
-                <!--<ul class="dropdown-menu">-->
-                <!--<li><a href="#">联系方式</a></li>-->
-                <!--<li><a href="#">在线客服</a></li>-->
-                <!--<li class="divider"></li>-->
-                <!--<li><a href="#">公司简介</a></li>-->
-                <!--</ul>-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                        <!--关于我们 <b class="caret"></b>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="#">联系方式</a></li>-->
+                        <!--<li><a href="#">在线客服</a></li>-->
+                        <!--<li class="divider"></li>-->
+                        <!--<li><a href="#">公司简介</a></li>-->
+                    <!--</ul>-->
                 <!--</li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/Course/Views/Admin/store/SysConfigList.html">系统配置</a></li>
-                <li id="Manage_Quit"><a>注销登录</a></li>
+                <li id="Manage_Quit"><a href="#">注销登录</ahref></li>
             </ul>
         </div>
     </div>
@@ -46,8 +64,8 @@
         layer.open({
             content: '退出登录',
             style: 'background-color:#F24C4C; color:#fff; border:none;',
-            btn:["确定","取消"],
-            yes:function () {
+            btn: ["确定", "取消"],
+            yes: function () {
                 $.cookie("UserInfo", null, {expires: 30, path: '/'});
                 window.location.href = "/Course/Views/Admin/Manage/Login.html";
             }
