--- a/Views/Admin/Store/SysConfigList.html
+++ b/Views/Admin/Store/SysConfigList.html
@@ -15,7 +15,7 @@
             <div class="col-xs-6 text-left">
                 <h4><strong>系统配置</strong></h4>
             </div>
-            <div class="col-xs-6 text-right">e
+            <div class="col-xs-6 text-right">
                 <button class="button70X30" id="btnAdd" onclick="window.location.href = 'SysConfigEdit.html'">新 增</button>
             </div>
         </div>
