--- a/Views/Admin/Withdraw/WithdrawList.html
+++ b/Views/Admin/Withdraw/WithdrawList.html
@@ -37,30 +37,7 @@
         <div class="row" style="padding: 10px;background: #e5e5e5">
             <div class="col-xs-12">
                 <ul class="list-group" id="course_list">
-                    <li class="list-group-item header">
-                        <div class="row ">
-                            <div class="col-lg-2">阶段课程名称</div>
-                            <div class="col-lg-1">课程类型</div>
-                            <div class="col-lg-1">开始时间</div>
-                            <div class="col-lg-1">结束时间</div>
-                            <div class="col-lg-2">举办地址</div>
-                            <div class="col-lg-1">食宿费</div>
-                            <div class="col-lg-1">招生名额</div>
-                            <div class="col-lg-3">操作</div>
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-lg-2">阶段课程名称</div>
-                            <div class="col-lg-1">课程类型</div>
-                            <div class="col-lg-1">开始时间</div>
-                            <div class="col-lg-1">结束时间</div>
-                            <div class="col-lg-2">举办地址</div>
-                            <div class="col-lg-1">食宿费</div>
-                            <div class="col-lg-1">招生名额</div>
-                            <div class="col-lg-3">操作</div>
-                        </div>
-                    </li>
+
                 </ul>
             </div>
         </div>
@@ -70,6 +47,7 @@
     <script src="../../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
+    <script src="../../../Framework/laypage-v1.3/laypage/laypage.js"></script>
     <script src="../../../Scripts/Admin/WithdrawList.js"></script>
 </body>
 </html>
