我的提现方式

--- a/Views/Payment/PaymentEdit.html
+++ b/Views/Payment/PaymentEdit.html
@@ -43,7 +43,7 @@
 </head>
 <body style="background: url('../../Images/personbackgroung.png') no-repeat;background-size: 100%;">
 <div class="container">
-    <div class="row">
+    <div class="row del" style="display: none;">
         <div class="col-xs-12 text-right" style="color: #F24C4C;margin-top: 10px;">
             删除
         </div>
