更换背景图，银行卡列表

--- a/Views/Payment/PaymentEdit.html
+++ b/Views/Payment/PaymentEdit.html
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div class="row itembg" style="margin-top: 1px;">
-        <div class="col-xs-3 text-right pdr0" style="color: #fff;padding-right: 0;">
+        <div class="col-xs-3 text-right pdr0">
             开户行:
         </div>
         <div class="col-xs-9 text-right">
@@ -65,11 +65,11 @@
         </div>
     </div>
     <div class="row itembg" style="margin-top: 1px;">
-        <div class="col-xs-3 text-right pdr0" style="color: #fff;padding-right: 0;">
+        <div class="col-xs-3 text-right pdr0">
             姓名:
         </div>
         <div class="col-xs-9 text-right">
-            <input class="input" type="text" name="PayName" placeholder="请此卡的户主名"/>
+            <input class="input" type="text" name="PayName" placeholder="请输入此卡的户主名"/>
         </div>
     </div>
     <div class="row itembg" style="margin-top: 10px;">
