--- a/Views/index.html
+++ b/Views/index.html
@@ -13,48 +13,52 @@
 
 </head>
 <body style="background: url('../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
-    <div class="container">
-        <div style="text-align: center;padding-bottom: 20px;padding-top: 20%;">
-            <img src="../Images/account/Account_Logo.png" style="height: 100px;width: 100px;"/>
-            <!--<p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>-->
-        </div>
-        <div class="row pt50">
-            <div class="col-xs-12 text-center">
-                <a href="Account/Login.html"><button id="btnLogin">登 录</button></a></div>
-        </div>
-        <div class="row pt15">
-            <div class="col-xs-12 text-center">
-                <a href="Account/Register.html"><button id="btnRegister">注 册</button></a></div>
-        </div>
+<div class="container">
+    <div style="text-align: center;padding-bottom: 20px;padding-top: 20%;">
+        <img src="../Images/account/Account_Logo.png" style="height: 100px;width: 100px;"/>
+        <!--<p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>-->
     </div>
-<!--<script>-->
-    <!--//是否PC端-->
-    <!--var IsPC = function () {-->
-        <!--var userAgentInfo = navigator.userAgent;-->
-        <!--var Agents = ["Android", "iPhone",-->
-            <!--"SymbianOS", "Windows Phone",-->
-            <!--"iPad", "iPod"];-->
-        <!--var flag = true;-->
-        <!--for (var v = 0; v < Agents.length; v++) {-->
-            <!--if (userAgentInfo.indexOf(Agents[v]) > 0) {-->
-                <!--flag = false;-->
-                <!--break;-->
-            <!--}-->
-        <!--}-->
-        <!--return flag;-->
-    <!--}-->
-    <!--if (IsPC()) {-->
-        <!--window.location.href = "/Course/Views/Admin/manage/Login.html";-->
-    <!--} else {-->
-        <!--window.location.href = "/Course/Views/Account/Login.html";-->
-    <!--}-->
-<!--</script>-->
+    <div class="row pt50">
+        <div class="col-xs-12 text-center">
+            <a href="Account/Login.html">
+                <button id="btnLogin">登 录</button>
+            </a></div>
+    </div>
+    <div class="row pt15">
+        <div class="col-xs-12 text-center">
+            <a href="Account/Register.html">
+                <button id="btnRegister">注 册</button>
+            </a></div>
+    </div>
+</div>
 
-    <script src="../Framework/Jqueryv2.4/jquery.min.js"></script>
-    <script src="../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
-    <script src="../Framework/jquery-cookies/jquery.cookie.js"></script>
-    <script src="../Framework/layer_mobile/layer.js"></script>
-    <script src="../Scripts/Commen/CourseCommen.js"></script>
 
+<script src="../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../Framework/jquery-cookies/jquery.cookie.js"></script>
+<script>
+    //是否PC端
+    var IsPC = function () {
+        var userAgentInfo = navigator.userAgent;
+        var Agents = ["Android", "iPhone",
+            "SymbianOS", "Windows Phone",
+            "iPad", "iPod"];
+        var flag = true;
+        for (var v = 0; v < Agents.length; v++) {
+            if (userAgentInfo.indexOf(Agents[v]) > 0) {
+                flag = false;
+                break;
+            }
+        }
+        return flag;
+    }
+    if (IsPC()) {
+        window.location.href = "/Course/Views/Admin/manage/Login.html";
+    } else {
+        var UserInfo = $.cookie("UserInfo");
+        if (UserInfo != null || UserInfo != undefined) {
+            window.location.href = "Course/CourseList.html"
+        }
+    }
+</script>
 </body>
 </html>
