合并完成,各个页面跳转添加完成

--- a/Views/PersonalCenter/PersonalCenter.html
+++ b/Views/PersonalCenter/PersonalCenter.html
@@ -34,6 +34,14 @@
 </div>
 <div class="line"></div>
 <div class="container">
+    <div class="row pdtb10 border_btm" id="withdraw" style="display: none">
+        <a href="../Withdraw/Withdraw.html">
+            <div class="col-xs-6 left_field">
+                <span>申请提现</span></div>
+            <div class="col-xs-6 right_field">
+                <img src="../../Images/personCenter/arrows.png" class="arrows"/></div>
+        </a>
+    </div>
     <div class="row pdtb10 border_btm" id="registerInformation">
         <a href="RegisterInformation.html">
             <div class="col-xs-6 left_field">
