--- a/Views/Withdraw/Withdraw.html
+++ b/Views/Withdraw/Withdraw.html
@@ -105,7 +105,7 @@
 
     </style>
 </head>
-<body>
+<body style="background: url('../../Images/personbackgroung.png') no-repeat;background-size: 100%;">
     <div class="succeed" id="succeed">
         你的申请已成功提交,<br/>请留意银行预留短信提示
     </div>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-xs-6" style="margin-top: 28px">
                     <button style="color: #fe5454" id="allwithdraw">全部提现</button>
-                    <button style="color: #fe5454">提现记录</button>
+                    <button style="color: #fe5454" id="withdraw_record">提现记录</button>
                 </div>
             </div>
             <div class="col-xs-12" style="margin-top: 30px;color: #fe5454;display: none" id="overrun">金额超限</div>
