--- a/Views/Withdraw/WithdrawRecord.html
+++ b/Views/Withdraw/WithdrawRecord.html
@@ -23,6 +23,7 @@
         }
 
         .integral {
+            padding-left: 0px;
             text-align: right;
             padding-top: 8px;
             font-size: 16px;
@@ -36,7 +37,7 @@
         }
 
         .stage {
-            padding-top: 10px;
+            padding-top: 0px;
             text-align: center;
             font-size: 16px;
             color: #cbcbcb;
@@ -52,7 +53,7 @@
 
     </style>
 </head>
-<body>
+<body style="background: url('../../Images/personbackgroung.png') no-repeat;background-size: 100%;">
     <div id="withdraw_record">
         <div class="record">
             <div class="col-xs-4 day">今天</div>
@@ -60,11 +61,12 @@
             <div class="col-xs-4 integral">提现1000元</div>
             <div class="col-xs-9 createtime">2015.01.01</div>
             <div class="col-xs-3" style="color: #ffffff;text-align: right;font-size: 16px;padding-top: 5px">成功</div>
-            <!--<div class="col-xs-4 stage">申请</div>-->
-            <!--<div class="col-xs-4 stage">通过审核</div>-->
-            <!--<div class="col-xs-4 stage">已汇款</div>-->
-            <div class="col-xs-12 stage" style="color: #F24C4C">你的提现账户有误,请仔细核对再重新申请</div>
-        </div>
+            <div class="col-xs-4 stage">申请</div>
+            <div class="col-xs-4 stage">通过审核</div>
+            <div class="col-xs-4 stage">已汇款</div>
+
+            <!--<div class="col-xs-12 stage" style="color: #F24C4C">你的提现账户有误,请仔细核对再重新申请</div>-->
+            <img src="../../Images/withdraw/withdraw_apply.png" style="padding-left: 15%;width: 100%;padding-right: 15%"/></div>
         <div class="bank">
             <div class="col-xs-3" style="padding-top: 5px">银行卡号:</div>
             <div class="col-xs-9" style="padding-top: 5px">123</div>
