--- a/Views/Admin/Withdraw/WithdrawList.html
+++ b/Views/Admin/Withdraw/WithdrawList.html
@@ -24,8 +24,10 @@
             <div class="col-xs-2" style="margin-top: 5px;">
                 <select class="form-control" id="Select">
                     <option value="0">全部</option>
-                    <option value="1">申请中</option>
-                    <option value="2">已成功</option>
+                    <option value="1">审核中</option>
+                    <option value="2">审核成功</option>
+                    <option value="3">已汇款</option>
+                    <option value="4">失败</option>
                 </select>
             </div>
             <div class="col-xs-5 text-right">
