--- a/Views/Withdraw/Withdraw.html
+++ b/Views/Withdraw/Withdraw.html
@@ -111,19 +111,11 @@
     </div>
     <div id="payment">
         <div class="bank" id="checked_bank">
-            <div class="col-xs-2">
-                <img class="addBank" src="../../Images/payment/addBank.png"/>
-            </div>
-            <div class="col-xs-8" style="color: #fff;font-size: 16px">
-                新增银行卡
-            </div>
-            <div class="col-xs-2 text-right" style="color: #fff;">
-                <img class="more" src="../../Images/payment/more.png"/>
-            </div>
+            <!--新增银行卡-->
         </div>
         <div class="pay_money">
             <div class="col-xs-3 left_field">
-                <span style="font-size: 16px;color: #ffffff;padding-left: 20px">提现金额</span>
+                <span style="font-size: 16px;color: #ffffff;padding-left: 10px">提现金额</span>
             </div>
             <div class="col-xs-9">
                 <!--<input class="money" id="money" placeholder="￥"/>-->
@@ -131,11 +123,11 @@
             </div>
             <div id="not_overrun">
                 <div class="col-xs-6" style="margin-top: 30px;color: #bfbfbf" id="maxmoney">
-                    最高可提现￥2000.00元
+                    <!--最高提现-->
                 </div>
-                <div class="col-xs-6" style="margin-top: 28px">
-                    <button style="color: #fe5454" id="allwithdraw">全部提现</button>
-                    <button style="color: #fe5454" id="withdraw_record">提现记录</button>
+                <div class="col-xs-6" style="margin-top: 30px">
+                    <span style="color: #fe5454;padding-right: 10px" id="allwithdraw">全部提现</span>
+                    <span style="color: #fe5454" id="withdraw_record">提现记录</span>
                 </div>
             </div>
             <div class="col-xs-12" style="margin-top: 30px;color: #fe5454;display: none" id="overrun">金额超限</div>
@@ -147,23 +139,7 @@
         </div>
     </div>
     <div class="bank_list" style="display: none" id="bank_list">
-        <div class="bank_num">
-            <div class="col-xs-3">
-                银行卡号:
-            </div>
-            <div class="col-xs-9">
-                3495846985369853
-            </div>
-        </div>
-        <div class="bank_num">
-            <div class="col-xs-3">
-                银行卡号:
-            </div>
-            <div class="col-xs-9">
-                3495846985369853
-            </div>
-        </div>
-        <div class="manage">管理银行卡</div>
+
     </div>
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
