管理员端提现列表添加税后数据显示,提现记录页面布局适配bug

--- a/Views/Withdraw/WithdrawRecord.html
+++ b/Views/Withdraw/WithdrawRecord.html
@@ -16,6 +16,10 @@
             height: 100px;
         }
 
+        .pdr0 {
+            padding-right: 0;
+        }
+
         .day {
             padding-top: 8px;
             color: #ffffff;
@@ -55,30 +59,7 @@
 </head>
 <body style="background: url('../../Images/personbackgroung.png') no-repeat;background-size: 100%;">
     <div id="withdraw_record">
-        <div class="record">
-            <div class="col-xs-4 day">今天</div>
-            <div class="col-xs-4 integral">-10000积分</div>
-            <div class="col-xs-4 integral">提现1000元</div>
-            <div class="col-xs-9 createtime">2015.01.01</div>
-            <div class="col-xs-3" style="color: #ffffff;text-align: right;font-size: 16px;padding-top: 5px">成功</div>
-            <div class="col-xs-4 stage">申请</div>
-            <div class="col-xs-4 stage">通过审核</div>
-            <div class="col-xs-4 stage">已汇款</div>
 
-            <!--<div class="col-xs-12 stage" style="color: #F24C4C">你的提现账户有误,请仔细核对再重新申请</div>-->
-            <img src="../../Images/withdraw/withdraw_apply.png" style="padding-left: 15%;width: 100%;padding-right: 15%"/></div>
-        <div class="bank">
-            <div class="col-xs-3" style="padding-top: 5px">银行卡号:</div>
-            <div class="col-xs-9" style="padding-top: 5px">123</div>
-            <div class="col-xs-3">开户行:</div>
-            <div class="col-xs-9">123</div>
-            <div class="col-xs-3">姓名:</div>
-            <div class="col-xs-6">123</div>
-            <div class="col-xs-3" style="text-align: right;color: ">修改</div>
-        </div>
-        <div class="record">
-
-        </div>
     </div>
 
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
