--- a/Views/Admin/Commen/header.html
+++ b/Views/Admin/Commen/header.html
@@ -37,7 +37,9 @@
                         <li><a href="/Course/Views/Admin/store/OrderList.html">订单管理</a></li>
                     </ul>
                 </li>
-
+                <li>
+                    <a href="/Course/Views/Admin/Withdraw/WithdrawList.html">提现管理</a>
+                </li>
                 <!--<li class="dropdown">-->
                     <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
                         <!--关于我们 <b class="caret"></b>-->
