--- a/Views/Admin/Withdraw/WithdrawList.html
+++ b/Views/Admin/Withdraw/WithdrawList.html
@@ -21,7 +21,7 @@
             <div class="col-xs-5 text-left">
                 <h4><strong>提现列表</strong></h4>
             </div>
-            <div class="col-xs-2" style="margin-top: 5px;">
+            <div class="col-xs-2 text-right" style="margin-top: 5px;">
                 <select class="form-control" id="Select">
                     <option value="0">全部</option>
                     <option value="1">审核中</option>
@@ -33,7 +33,7 @@
             <div class="col-xs-5 text-right">
                 <input type="text" class="input" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
                 <button class="button70X30" id="btnSearch">搜 索</button>
-                <!--<button class="button70X30" id="btnAdd" onclick="window.location.href='CourseEdit.html'">新 增</button>-->
+                <button class="button70X30" id="btnImport" >导 出</button>
             </div>
         </div>
         <div class="row" style="padding: 10px;background: #e5e5e5">
