修改提现页面字体大小

--- a/Views/Withdraw/Withdraw.html
+++ b/Views/Withdraw/Withdraw.html
@@ -43,6 +43,7 @@
 
         .money {
             border: 0px;
+            width: 220px;
             border-bottom: 1px solid #ffffff;
             background-color: transparent;
             outline: none;
@@ -57,7 +58,7 @@
             margin: 50px;
             background-color: #fd5454;
             text-align: center;
-            font-size: 18px;
+            font-size: 14px;
             color: white;
             height: 50px;
             line-height: 50px;
@@ -75,7 +76,7 @@
         }
 
         .bank_num {
-            font-size: 16px;
+            font-size: 14px;
             margin-bottom: 1px;
             height: 60px;
             line-height: 60px;
@@ -88,7 +89,7 @@
             margin: 50px;
             background-color: #fd5454;
             text-align: center;
-            font-size: 18px;
+            font-size: 14px;
             color: white;
             height: 50px;
             line-height: 50px;
@@ -98,7 +99,7 @@
         .succeed {
             margin: 50px;
             color: #fe5454;
-            font-size: 16px;
+            font-size: 14px;
             text-align: center;
             display: none;
         }
@@ -115,7 +116,7 @@
         </div>
         <div class="pay_money">
             <div class="col-xs-3 left_field">
-                <span style="font-size: 16px;color: #ffffff;padding-left: 10px">提现金额</span>
+                <span style="font-size: 14px;color: #ffffff;padding-left: 15px">提现金额</span>
             </div>
             <div class="col-xs-9">
                 <!--<input class="money" id="money" placeholder="￥"/>-->
@@ -133,7 +134,7 @@
             <div class="col-xs-12" style="margin-top: 30px;color: #fe5454;display: none" id="overrun">金额超限</div>
         </div>
         <div class="withdraw" id="withdraw_add">确认提现</div>
-        <div class="withdraw_rule"><div style="text-align: center;font-size: 16px">提现规则：</div><br/>
+        <div class="withdraw_rule"><div style="text-align: center;font-size: 14px">提现规则：</div><br/>
             1. 每月最多提现两次，每次提现金额不得少于1000元<br/>
             2. 根据国家法律规定，推广费按照劳务费缴税，税率为4.46%，提现到账金额中将自动扣除
         </div>
