--- a/Views/Payment/PaymentList.html
+++ b/Views/Payment/PaymentList.html
@@ -49,11 +49,17 @@
 <body style="background: url('../../Images/personbackgroung.png') no-repeat;background-size: 100%;">
 <div class="container">
     <div id="payList"></div>
+    <div class="row text-right" style="margin-top: 10px;">
+        <div class="col-xs-12">
+            <a href="../Withdraw/Withdraw.html" style="text-decoration: underline;color: #3399ff;">返回继续提现</a>
+        </div>
+    </div>
     <div class="row" style="margin-top: 30px;">
         <div class="col-xs-12 text-center">
             <button id="btnAdd">添加银行卡</button>
         </div>
     </div>
+    <div style="height: 60px;width: 100%;"></div>
 </div>
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
